--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: flutter_splash_screen
 description: A splash screen API for flutter which can programatically hide and show the splash screen. Works on Android and iOS.
-version: 0.2.0
+version: 0.3.0
 author: CrazyCodeBoy <crazycodeboy@gmail.com>
 homepage: https://github.com/crazycodeboy/flutter_splash_screen
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=2.0.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,8 +26,12 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: org.devio.flutter.splashscreen
-    pluginClass: FlutterSplashScreenPlugin
+    platforms:
+      android:
+        package: org.devio.flutter.splashscreen
+        pluginClass: FlutterSplashScreenPlugin
+      ios:
+        pluginClass: FlutterSplashScreenPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
